# UnityPlugin

./: .hgignore  README.md  run.txt
Assets/: Plugin.cs  PluginTest.cs  Test.unity
ProjectSettings/: ProjectSettings.asset
game/: main.lua
native/: CMakeLists.txt  main.cpp
native/lovr/: api.h  lovr.c  lovr.h  luax.c  luax.h
native/lovr/api/: filesystem.c
native/lovr/filesystem/: filesystem.c  filesystem.h
native/lovr/resources/: boot.lua  boot.lua.h
